<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="beneficiary"
            type="com.example.empowertask.model.Beneficiary"/>
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_dimen_8dp"
        android:elevation="@dimen/app_dimen_8dp">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/app_dimen_20dp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/app_dimen_8dp"
                android:text="@{beneficiary.firstName.concat(@string/space).concat(beneficiary.lastName)}"
                tools:text="@string/full_name"/>

            <TextView
                android:id="@+id/tvBeneType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                android:text="@{`BeneType: `+beneficiary.beneType}"
                tools:text="@string/bene_type"/>

            <TextView
                android:id="@+id/tvDesignation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBeneType"
                tools:text="@string/designation"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.cardview.widget.CardView>

</layout>